--- a/NBA.html
+++ b/NBA.html
@@ -30,6 +30,7 @@
             position: relative;
         }
 
+        /* Header Styles */
         .header {
             display: flex;
             justify-content: space-between;
@@ -48,30 +49,6 @@
             margin: 0;
         }
 
-        .tabs {
-            display: flex;
-            gap: 10px;
-            margin: 0 auto 30px;
-            padding: 10px 20px;
-            overflow-x: auto;
-            white-space: nowrap;
-            justify-content: center;
-            width: 100%;
-            max-width: 800px;
-            position: relative;
-            z-index: 1;
-        }
-
-        .nav-buttons {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            z-index: 2;
-        }
-
         .logo {
             font-family: 'Orbitron', sans-serif;
             font-size: 24px;
@@ -84,13 +61,60 @@
             gap: 5px;
         }
 
+        /* Navigation Styles */
+        .nav-buttons {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            z-index: 2;
+        }
+
+        .viz-button {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            padding: 12px 20px;
+            background: linear-gradient(145deg, #1c1c1c, #2a004d);
+            border-radius: 12px;
+            color: #ffffff;
+            text-decoration: none;
+            font-family: 'Orbitron', sans-serif;
+            font-size: 14px;
+            font-weight: 600;
+            letter-spacing: 0.5px;
+            transition: all 0.3s ease;
+            border: 1px solid #8B00FF;
+            box-shadow: 0 0 10px rgba(139, 0, 255, 0.3);
+        }
+
+        .viz-button:hover {
+            background: linear-gradient(45deg, #8B00FF, #00DDEB);
+            box-shadow: 0 0 20px rgba(139, 0, 255, 0.8);
+            transform: translateY(-2px) scale(1.02);
+            border-color: #00DDEB;
+        }
+
+        .viz-button svg {
+            width: 20px;
+            height: 20px;
+        }
+
+        /* Tab Navigation */
         .tabs {
             display: flex;
             gap: 10px;
-            margin-bottom: 30px;
+            margin: 0 auto 30px;
+            padding: 10px 20px;
             overflow-x: auto;
             white-space: nowrap;
-            padding-bottom: 5px;
+            justify-content: center;
+            width: 100%;
+            max-width: 800px;
+            position: relative;
+            z-index: 1;
         }
 
         .tab {
@@ -117,6 +141,7 @@
             box-shadow: 0 0 15px rgba(139, 0, 255, 0.7);
         }
 
+        /* Schedule Section */
         .schedule {
             background: linear-gradient(145deg, #1c1c1c, #2a004d);
             border-radius: 10px;
@@ -134,6 +159,7 @@
             text-align: center;
         }
 
+        /* Match Styles */
         .match {
             display: flex;
             flex-direction: column;
@@ -153,14 +179,13 @@
             border-bottom: none;
         }
 
-        /* Estilo para jogos ao vivo */
+        /* Live Game Styles */
         .match.live-game {
             border-left: 5px solid #FF0057;
             background: rgba(255, 0, 87, 0.1);
             animation: livePulse 2s infinite;
         }
 
-        /* Estilo para jogos finalizados */
         .match.final-game {
             opacity: 0.8;
             background: rgba(30, 30, 30, 0.5);
@@ -244,6 +269,7 @@
             margin-bottom: 10px;
         }
 
+        /* Team Display */
         .teams {
             display: flex;
             justify-content: center;
@@ -314,6 +340,7 @@
             font-size: 14px;
         }
 
+        /* Versus and Score */
         .versus {
             display: flex;
             flex-direction: column;
@@ -343,14 +370,12 @@
             text-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
         }
 
-        /* Status para jogos ao vivo */
         .status.in-progress {
             background: #FF0057;
             color: #ffffff;
             animation: pulse 1.5s infinite;
         }
 
-        /* Status para jogos finalizados */
         .status.final {
             background: #555;
             color: #ccc;
@@ -364,6 +389,7 @@
             text-shadow: 0 0 5px rgba(0, 221, 235, 0.3);
         }
 
+        /* Detail Buttons */
         .details {
             margin-top: 10px;
         }
@@ -388,6 +414,7 @@
             background: linear-gradient(45deg, #00DDEB, #8B00FF);
         }
 
+        /* Error Messages */
         .error {
             color: #FF0057;
             padding: 15px;
@@ -396,6 +423,37 @@
             text-shadow: 0 0 5px rgba(255, 0, 87, 0.3);
         }
 
+        .error-details {
+            font-family: 'Roboto', sans-serif;
+            font-size: 14px;
+            color: #ffffff;
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .retry-btn {
+            background: linear-gradient(45deg, #FF0057, #8B00FF);
+            border: none;
+            padding: 8px 16px;
+            border-radius: 5px;
+            color: #ffffff;
+            font-family: 'Orbitron', sans-serif;
+            font-size: 14px;
+            text-transform: uppercase;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 0 10px rgba(255, 0, 87, 0.5);
+            display: block;
+            margin: 10px auto;
+        }
+
+        .retry-btn:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 15px rgba(139, 0, 255, 0.8);
+            background: linear-gradient(45deg, #8B00FF, #FF0057);
+        }
+
+        /* Modal Styles */
         .modal {
             display: none;
             position: fixed;
@@ -450,6 +508,7 @@
             text-shadow: 0 0 5px rgba(0, 221, 235, 0.5);
         }
 
+        /* Stats Section */
         .stats-header {
             display: flex;
             justify-content: space-between;
@@ -517,36 +576,6 @@
         .stat-bar.away {
             background: linear-gradient(90deg, #C8102E, #FF0057);
             box-shadow: 0 0 8px rgba(255, 0, 87, 0.5);
-        }
-
-        .error-details {
-            font-family: 'Roboto', sans-serif;
-            font-size: 14px;
-            color: #ffffff;
-            text-align: center;
-            margin-top: 10px;
-        }
-
-        .retry-btn {
-            background: linear-gradient(45deg, #FF0057, #8B00FF);
-            border: none;
-            padding: 8px 16px;
-            border-radius: 5px;
-            color: #ffffff;
-            font-family: 'Orbitron', sans-serif;
-            font-size: 14px;
-            text-transform: uppercase;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 0 10px rgba(255, 0, 87, 0.5);
-            display: block;
-            margin: 10px auto;
-        }
-
-        .retry-btn:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 15px rgba(139, 0, 255, 0.8);
-            background: linear-gradient(45deg, #8B00FF, #FF0057);
         }
     </style>
 </head>
@@ -916,84 +945,3 @@
 </body>
 
 </html>
-
-<style>
-    .nav-buttons {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        z-index: 2;
-    }
-
-    .container {
-        max-width: 1200px;
-        margin: 0 auto;
-        padding: 20px;
-        position: relative;
-    }
-
-    .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 30px;
-        padding: 0 20px;
-    }
-
-    .header h1 {
-        font-family: 'Orbitron', sans-serif;
-        font-size: 36px;
-        background: linear-gradient(90deg, #8B00FF, #00DDEB);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
-        text-shadow: 0 0 10px rgba(139, 0, 255, 0.5);
-        margin: 0;
-    }
-
-    .tabs {
-        display: flex;
-        gap: 10px;
-        margin: 0 auto 30px;
-        padding: 10px 20px;
-        overflow-x: auto;
-        white-space: nowrap;
-        justify-content: center;
-        width: 100%;
-        max-width: 800px;
-        position: relative;
-        z-index: 1;
-    }
-
-    .viz-button {
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        padding: 12px 20px;
-        background: linear-gradient(145deg, #1c1c1c, #2a004d);
-        border-radius: 12px;
-        color: #ffffff;
-        text-decoration: none;
-        font-family: 'Orbitron', sans-serif;
-        font-size: 14px;
-        font-weight: 600;
-        letter-spacing: 0.5px;
-        transition: all 0.3s ease;
-        border: 1px solid #8B00FF;
-        box-shadow: 0 0 10px rgba(139, 0, 255, 0.3);
-    }
-
-    .viz-button:hover {
-        background: linear-gradient(45deg, #8B00FF, #00DDEB);
-        box-shadow: 0 0 20px rgba(139, 0, 255, 0.8);
-        transform: translateY(-2px) scale(1.02);
-        border-color: #00DDEB;
-    }
-
-    .viz-button svg {
-        width: 20px;
-        height: 20px;
-    }
-</style>
