--- a/NBA.html
+++ b/NBA.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -6,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBA Stats - RW Tips</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -140,9 +140,17 @@
         }
 
         @keyframes livePulse {
-            0% { box-shadow: 0 0 5px rgba(255, 0, 87, 0.5); }
-            50% { box-shadow: 0 0 20px rgba(255, 0, 87, 0.8); }
-            100% { box-shadow: 0 0 5px rgba(255, 0, 87, 0.5); }
+            0% {
+                box-shadow: 0 0 5px rgba(255, 0, 87, 0.5);
+            }
+
+            50% {
+                box-shadow: 0 0 20px rgba(255, 0, 87, 0.8);
+            }
+
+            100% {
+                box-shadow: 0 0 5px rgba(255, 0, 87, 0.5);
+            }
         }
 
         .live-badge {
@@ -174,15 +182,31 @@
         }
 
         @keyframes pulse {
-            0% { opacity: 0.7; }
-            50% { opacity: 1; }
-            100% { opacity: 0.7; }
+            0% {
+                opacity: 0.7;
+            }
+
+            50% {
+                opacity: 1;
+            }
+
+            100% {
+                opacity: 0.7;
+            }
         }
 
         @keyframes blink {
-            0% { opacity: 1; }
-            50% { opacity: 0.5; }
-            100% { opacity: 1; }
+            0% {
+                opacity: 1;
+            }
+
+            50% {
+                opacity: 0.5;
+            }
+
+            100% {
+                opacity: 1;
+            }
         }
 
         .match-header {
@@ -303,7 +327,7 @@
         .status.final {
             background: #555;
             color: #ccc;
-            box-shadow: 0 0 5px rgba(0,0,0,0.3);
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
         }
 
         .time {
@@ -497,6 +521,32 @@
             box-shadow: 0 0 15px rgba(139, 0, 255, 0.8);
             background: linear-gradient(45deg, #8B00FF, #FF0057);
         }
+
+        .nav-buttons {
+            display: flex;
+            gap: 10px;
+        }
+
+        .nav-button {
+            background: linear-gradient(45deg, #8B00FF, #00DDEB);
+            border: none;
+            padding: 10px 20px;
+            border-radius: 8px;
+            color: #ffffff;
+            font-family: 'Orbitron', sans-serif;
+            font-size: 16px;
+            text-transform: uppercase;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 0 10px rgba(139, 0, 255, 0.5);
+            letter-spacing: 1px;
+        }
+
+        .nav-button:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 15px rgba(0, 221, 235, 0.8);
+            background: linear-gradient(45deg, #00DDEB, #8B00FF);
+        }
     </style>
 </head>
 
@@ -504,6 +554,9 @@
     <div class="container">
         <div class="header">
             <h1>CALENDÁRIO NBA</h1>
+            <div class="nav-buttons">
+                <button id="visualizationBtn" class="nav-button">Visualização</button>
+            </div>
             <div class="logo">👑 𝗥𝗪 𝗧𝗜𝗣𝗦 🎮</div>
         </div>
         <div class="tabs" id="tabs"></div>
@@ -602,6 +655,11 @@
                         previousScores = {};
                         startAutoUpdate();
                     });
+                });
+
+                // Navigation button functionality
+                document.getElementById('visualizationBtn').addEventListener('click', () => {
+                    window.location.href = 'visualization.html';
                 });
 
                 startAutoUpdate();
@@ -854,4 +912,5 @@
         renderTabs();
     </script>
 </body>
+
 </html>
