--- a/NBA.html
+++ b/NBA.html
@@ -555,7 +555,7 @@
         <div class="header">
             <h1>CALENDÁRIO NBA</h1>
             <div class="nav-buttons">
-                <button id="visualizationBtn" class="nav-button">Visualização</button>
+                <button id="visualizationBtn" class="nav-button">🎮</button>
             </div>
             <div class="logo">👑 𝗥𝗪 𝗧𝗜𝗣𝗦 🎮</div>
         </div>
