--- a/NBA.html
+++ b/NBA.html
@@ -541,6 +541,7 @@
             </div>
             <div class="tabs" id="tabs"></div>
             <div class="schedule" id="schedule"></div>
+            <div class="player-stats" id="playerStats" style="display: none;"></div>
         </div>
         <div class="modal" id="gameStatsModal">
             <div class="modal-content">
@@ -618,6 +619,10 @@
                     let html = '';
                     let dataAtiva = dates.includes(hoje) ? hoje : dates[0];
 
+                    html += `<div class="tab active" data-tab="schedule">Jogos</div>`;
+                    html += `<div class="tab" data-tab="stats">Estatísticas</div>`;
+                    html += `<div class="tab" data-tab="players">Jogadores</div>`;
+
                     dates.forEach(date => {
                         const ativa = date === dataAtiva;
                         const textoAba = formatarDataBrasil(date);
@@ -631,9 +636,24 @@
                         tab.addEventListener('click', () => {
                             document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
                             tab.classList.add('active');
-                            currentDate = tab.dataset.date;
-                            previousScores = {};
-                            startAutoUpdate();
+
+                            if (tab.dataset.tab) {
+                                const tabId = tab.dataset.tab;
+                                document.getElementById('schedule').style.display = tabId === 'schedule' ? 'block' : 'none';
+                                document.getElementById('playerStats').style.display = tabId === 'players' ? 'block' : 'none';
+
+                                if (tabId === 'players' && currentDate) {
+                                    fetchSchedule(currentDate).then(data => {
+                                        if (data?.events?.[0]) {
+                                            displayPlayerStats(data.events[0].eventId);
+                                        }
+                                    });
+                                }
+                            } else {
+                                currentDate = tab.dataset.date;
+                                previousScores = {};
+                                startAutoUpdate();
+                            }
                         });
                     });
 
@@ -884,6 +904,71 @@
             });
 
             // Inicializa a aplicação
+            async function fetchPlayerStats(eventId) {
+                try {
+                    const playerStatsUrl = `https://stats.sports.bellmedia.ca/sports/basketball/leagues/nba/event/${eventId}/playerSeasonStats?nbPlayersToShow=1&brand=tsn&qualifiedOnly=true&type=json&seasonType=regular_season`;
+                    const response = await fetch(`https://api.allorigins.win/raw?url=${encodeURIComponent(playerStatsUrl)}`);
+                    const data = await response.json();
+                    return data;
+                } catch (error) {
+                    console.error('Error fetching player stats:', error);
+                    throw error;
+                }
+            }
+
+            async function displayPlayerStats(eventId) {
+                try {
+                    const data = await fetchPlayerStats(eventId);
+                    const playerStatsDiv = document.getElementById('playerStats');
+                    let html = '';
+
+                    if (data.away?.playerStatsByCategory) {
+                        const categories = ['threePointsAttempted', 'rebounds', 'assists', 'blocks', 'steals'];
+                        categories.forEach(category => {
+                            if (data.away.playerStatsByCategory[category]?.[0]) {
+                                const player = data.away.playerStatsByCategory[category][0];
+                                html += `
+                        <div class="player-card">
+                            <div class="player-header">
+                                <div class="player-info">
+                                    <div class="player-name">${player.player.displayName}</div>
+                                    <div class="player-position">${player.player.position}</div>
+                                </div>
+                            </div>
+                            <div class="player-stats-grid">
+                                <div class="stat-item">
+                                    <div class="stat-value">${player.stats.pointsAverage}</div>
+                                    <div class="stat-label">PPG</div>
+                                </div>
+                                <div class="stat-item">
+                                    <div class="stat-value">${player.stats.reboundsPerGame}</div>
+                                    <div class="stat-label">RPG</div>
+                                </div>
+                                <div class="stat-item">
+                                    <div class="stat-value">${player.stats.assistsPerGame}</div>
+                                    <div class="stat-label">APG</div>
+                                </div>
+                                <div class="stat-item">
+                                    <div class="stat-value">${player.stats.blocksPerGame}</div>
+                                    <div class="stat-label">BPG</div>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                            }
+                        });
+                    }
+
+                    playerStatsDiv.innerHTML = html || '<div class="error">Estatísticas dos jogadores não disponíveis</div>';
+                } catch (error) {
+                    console.error('Error displaying player stats:', error);
+                    document.getElementById('playerStats').innerHTML = `
+            <div class="error">Erro ao carregar estatísticas dos jogadores</div>
+            <div class="error-details">${error.message}</div>
+        `;
+                }
+            }
+
             renderTabs();
         </script>
 </body>
