--- a/NBA.html
+++ b/NBA.html
@@ -139,6 +139,98 @@
             background: rgba(30, 30, 30, 0.5);
         }
 
+        .team-leaders-container {
+            padding: 20px;
+        }
+
+        .section-title {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 24px;
+            text-align: center;
+            margin-bottom: 30px;
+            background: linear-gradient(90deg, #8B00FF, #00DDEB);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 0 0 10px rgba(139, 0, 255, 0.5);
+        }
+
+        .leaders-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+
+        .leader-category {
+            background: linear-gradient(145deg, #1c1c1c, #2a004d);
+            border-radius: 10px;
+            padding: 20px;
+            box-shadow: 0 0 20px rgba(139, 0, 255, 0.2);
+        }
+
+        .leader-category h3 {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 16px;
+            text-align: center;
+            margin-bottom: 20px;
+            color: #FFD700;
+            text-shadow: 0 0 8px rgba(255, 215, 0, 0.5);
+        }
+
+        .leader-stats {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .leader-team {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            padding: 10px;
+            border-radius: 8px;
+            background: rgba(139, 0, 255, 0.1);
+            transition: all 0.3s ease;
+        }
+
+        .leader-team:hover {
+            background: rgba(139, 0, 255, 0.2);
+            transform: translateX(5px);
+        }
+
+        .leader-photo {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            background: #2a004d;
+            border: 2px solid #8B00FF;
+        }
+
+        .leader-info {
+            flex-grow: 1;
+        }
+
+        .leader-info .position {
+            display: inline-block;
+            font-size: 12px;
+            padding: 2px 6px;
+            background: #8B00FF;
+            border-radius: 4px;
+            margin-bottom: 4px;
+        }
+
+        .leader-info .name {
+            display: block;
+            font-size: 14px;
+            font-weight: bold;
+        }
+
+        .stat {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 20px;
+            color: #00DDEB;
+            text-shadow: 0 0 8px rgba(0, 221, 235, 0.5);
+        }
+
         @keyframes livePulse {
             0% {
                 box-shadow: 0 0 5px rgba(255, 0, 87, 0.5);
@@ -560,6 +652,118 @@
             <div class="logo">👑 𝗥𝗪 𝗧𝗜𝗣𝗦 🎮</div>
         </div>
         <div class="tabs" id="tabs"></div>
+        <div id="teamLeaders" style="display: none;">
+            <div class="team-leaders-container">
+                <h2 class="section-title">TEAM LEADERS</h2>
+                <div class="leaders-grid">
+                    <div class="leader-category">
+                        <h3>POINTS PER GAME</h3>
+                        <div class="leader-stats">
+                            <div class="leader-team">
+                                <img src="" alt="" class="leader-photo">
+                                <div class="leader-info">
+                                    <span class="position">G</span>
+                                    <span class="name">Coby White</span>
+                                </div>
+                                <div class="stat">20.7</div>
+                            </div>
+                            <div class="leader-team">
+                                <img src="" alt="" class="leader-photo">
+                                <div class="leader-info">
+                                    <span class="position">G</span>
+                                    <span class="name">Donovan Mitchell</span>
+                                </div>
+                                <div class="stat">24.0</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="leader-category">
+                        <h3>REBOUNDS/GAME</h3>
+                        <div class="leader-stats">
+                            <div class="leader-team">
+                                <img src="" alt="" class="leader-photo">
+                                <div class="leader-info">
+                                    <span class="position">C</span>
+                                    <span class="name">Nikola Vucevic</span>
+                                </div>
+                                <div class="stat">10.1</div>
+                            </div>
+                            <div class="leader-team">
+                                <img src="" alt="" class="leader-photo">
+                                <div class="leader-info">
+                                    <span class="position">C</span>
+                                    <span class="name">Jarrett Allen</span>
+                                </div>
+                                <div class="stat">9.8</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="leader-category">
+                        <h3>ASSISTS/GAME</h3>
+                        <div class="leader-stats">
+                            <div class="leader-team">
+                                <img src="" alt="" class="leader-photo">
+                                <div class="leader-info">
+                                    <span class="position">G</span>
+                                    <span class="name">Josh Giddey</span>
+                                </div>
+                                <div class="stat">7.1</div>
+                            </div>
+                            <div class="leader-team">
+                                <img src="" alt="" class="leader-photo">
+                                <div class="leader-info">
+                                    <span class="position">PG</span>
+                                    <span class="name">Darius Garland</span>
+                                </div>
+                                <div class="stat">6.7</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="leader-category">
+                        <h3>BLOCKS/GAME</h3>
+                        <div class="leader-stats">
+                            <div class="leader-team">
+                                <img src="" alt="" class="leader-photo">
+                                <div class="leader-info">
+                                    <span class="position">F</span>
+                                    <span class="name">Matas Buzelis</span>
+                                </div>
+                                <div class="stat">0.9</div>
+                            </div>
+                            <div class="leader-team">
+                                <img src="" alt="" class="leader-photo">
+                                <div class="leader-info">
+                                    <span class="position">F/C</span>
+                                    <span class="name">Evan Mobley</span>
+                                </div>
+                                <div class="stat">1.6</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="leader-category">
+                        <h3>STEALS/GAME</h3>
+                        <div class="leader-stats">
+                            <div class="leader-team">
+                                <img src="" alt="" class="leader-photo">
+                                <div class="leader-info">
+                                    <span class="position">G</span>
+                                    <span class="name">Lonzo Ball</span>
+                                </div>
+                                <div class="stat">1.3</div>
+                            </div>
+                            <div class="leader-team">
+                                <img src="" alt="" class="leader-photo">
+                                <div class="leader-info">
+                                    <span class="position">G</span>
+                                    <span class="name">Donovan Mitchell</span>
+                                </div>
+                                <div class="stat">1.3</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="schedule" id="schedule"></div>
     </div>
     <div class="modal" id="gameStatsModal">
