--- a/NBA.html
+++ b/NBA.html
@@ -665,27 +665,6 @@
         .leader-player-info {
             text-align: right;
         }
-
-        .loading {
-            text-align: center;
-            font-family: 'Roboto', sans-serif;
-            font-size: 16px;
-            color: #00DDEB;
-            text-shadow: 0 0 5px rgba(0, 221, 235, 0.3);
-            padding: 20px;
-        }
-
-        .loading::after {
-            content: '...';
-            animation: dots 1.5s steps(5, end) infinite;
-        }
-
-        @keyframes dots {
-            0%, 20% { content: '.'; }
-            40% { content: '..'; }
-            60% { content: '...'; }
-            80%, 100% { content: ''; }
-        }
     </style>
 </head>
 <body>
@@ -729,44 +708,13 @@
         const categoryTabsDiv = document.querySelector('#categoryTabs');
         const leadersGrid = document.querySelector('#leadersGrid');
 
-        // Cache for API responses
-        const apiCache = new Map();
-
-        async function fetchWithTimeout(url, options = {}, timeout = 10000) {
-            const controller = new AbortController();
-            const id = setTimeout(() => controller.abort(), timeout);
-            try {
-                const response = await fetch(url, { ...options, signal: controller.signal });
-                clearTimeout(id);
-                return response;
-            } catch (error) {
-                clearTimeout(id);
-                throw error;
-            }
-        }
-
-        async function fetchWithRetry(url, retries = 3, delay = 1000) {
-            for (let i = 0; i < retries; i++) {
-                try {
-                    const response = await fetchWithTimeout(url);
-                    if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
-                    return await response.json();
-                } catch (error) {
-                    if (i === retries - 1) throw error;
-                    await new Promise(resolve => setTimeout(resolve, delay));
-                }
-            }
-        }
-
         async function fetchPlayerSeasonStats(eventId) {
-            const cacheKey = `playerSeasonStats_${eventId}`;
-            if (apiCache.has(cacheKey)) return apiCache.get(cacheKey);
-
             const apiUrl = `https://stats.sports.bellmedia.ca/sports/basketball/leagues/nba/event/${eventId}/playerSeasonStats?nbPlayersToShow=5&brand=tsn&qualifiedOnly=true&type=json&seasonType=regular_season`;
             const proxyUrl = `https://api.allorigins.win/raw?url=${encodeURIComponent(apiUrl)}`;
             try {
-                const data = await fetchWithRetry(proxyUrl);
-                apiCache.set(cacheKey, data);
+                const response = await fetch(proxyUrl);
+                if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
+                const data = await response.json();
                 return data;
             } catch (error) {
                 console.error('Error fetching player season stats:', error);
@@ -775,7 +723,7 @@
         }
 
         function getPlayerPhotoUrl(playerName) {
-            const seoId = playerName.toLowerCase().replace(/\s+/g, '-');
+            const seoId = playerName.toLowerCase().replace(/\s+/g, '-') + '-358183'; // Simplified for demo; adjust based on actual SEO ID logic
             return `https://tsnimages.tsn.ca/ImageProvider/PlayerHeadshot?seoId=${seoId}&width=128&height=128`;
         }
 
@@ -805,16 +753,13 @@
         }
 
         async function fetchDates() {
-            const cacheKey = 'dates';
-            if (apiCache.has(cacheKey)) return apiCache.get(cacheKey);
-
             const apiUrl = `https://stats.sports.bellmedia.ca/sports/basketball/leagues/nba/scheduleV2/subset/dates?brand=tsn&type=json`;
             const proxyUrl = `https://api.allorigins.win/raw?url=${encodeURIComponent(apiUrl)}`;
             try {
-                const data = await fetchWithRetry(proxyUrl);
-                const dates = Object.keys(data).sort();
-                apiCache.set(cacheKey, dates);
-                return dates;
+                const response = await fetch(proxyUrl);
+                if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
+                const data = await response.json();
+                return Object.keys(data).sort();
             } catch (error) {
                 console.error('Error fetching dates:', error);
                 throw error;
@@ -822,14 +767,12 @@
         }
 
         async function fetchSchedule(date) {
-            const cacheKey = `schedule_${date}`;
-            if (apiCache.has(cacheKey)) return apiCache.get(cacheKey);
-
             const apiUrl = `https://stats.sports.bellmedia.ca/sports/basketball/leagues/nba/scheduleV2/subset/dates?brand=tsn&type=json&dateOrId=${date}`;
             const proxyUrl = `https://api.allorigins.win/raw?url=${encodeURIComponent(apiUrl)}`;
             try {
-                const data = await fetchWithRetry(proxyUrl);
-                apiCache.set(cacheKey, data[date]);
+                const response = await fetch(proxyUrl);
+                if (!response.ok) throw new Error(`HTTP error! Status: ${response.status}`);
+                const data = await response.json();
                 return data[date];
             } catch (error) {
                 console.error('Error fetching schedule:', error);
@@ -1025,14 +968,6 @@
 
         async function showGameStats(eventId, homeName, awayName) {
             try {
-                // Show loading indicator
-                teamLeadersContainer.innerHTML = '<div class="loading">Carregando líderes da equipe</div>';
-                statsContent.innerHTML = '<div class="loading">Carregando estatísticas</div>';
-                modalTitle.textContent = `${homeName} vs ${awayName}`;
-                homeTeamName.textContent = homeName;
-                awayTeamName.textContent = awayName;
-                modal.style.display = 'flex';
-
                 const scheduleData = await fetchSchedule(currentDate);
                 const game = scheduleData?.events.find(e => e.eventId === eventId)?.event;
                 const gameStatus = game?.status || 'Pre-Game';
@@ -1042,28 +977,20 @@
                 let statsData, playerData;
                 if (isLiveOrFinished) {
                     const gameStatsUrl = `https://stats.sports.bellmedia.ca/sports/basketball/leagues/nba/event/${eventId}/stats?brand=tsn&type=json`;
-                    const cacheKey = `gameStats_${eventId}`;
-                    if (apiCache.has(cacheKey)) {
-                        statsData = apiCache.get(cacheKey);
-                    } else {
-                        const response = await fetchWithRetry(`https://api.allorigins.win/raw?url=${encodeURIComponent(gameStatsUrl)}`);
-                        statsData = response;
-                        apiCache.set(cacheKey, statsData);
-                    }
+                    const response = await fetch(`https://api.allorigins.win/raw?url=${encodeURIComponent(gameStatsUrl)}`);
+                    statsData = await response.json();
                 } else {
                     const seasonStatsUrl = `https://stats.sports.bellmedia.ca/sports/basketball/leagues/nba/event/${eventId}/competitorSeasonStats?brand=tsn&type=json`;
-                    const cacheKey = `seasonStats_${eventId}`;
-                    if (apiCache.has(cacheKey)) {
-                        statsData = apiCache.get(cacheKey);
-                    } else {
-                        const response = await fetchWithRetry(`https://api.allorigins.win/raw?url=${encodeURIComponent(seasonStatsUrl)}`);
-                        statsData = response;
-                        apiCache.set(cacheKey, statsData);
-                    }
+                    const response = await fetch(`https://api.allorigins.win/raw?url=${encodeURIComponent(seasonStatsUrl)}`);
+                    statsData = await response.json();
                 }
 
                 // Fetch player season stats for team leaders
                 playerData = await fetchPlayerSeasonStats(eventId);
+
+                modalTitle.textContent = `${homeName} vs ${awayName}`;
+                homeTeamName.textContent = homeName;
+                awayTeamName.textContent = awayName;
 
                 // Process team leaders
                 const categories = {
@@ -1193,6 +1120,7 @@
                 } else {
                     statsContent.innerHTML = `<div class="stat-row"><div class="stat-label" style="width: 100%; text-align: center;">Estatísticas não disponíveis</div></div>`;
                 }
+                modal.style.display = 'flex';
             } catch (error) {
                 console.error('Failed to load game stats:', error);
                 teamLeadersContainer.innerHTML = '';
